# AlphaBench

./: .gitignore  README.md  factor_cache.sqlite  pyproject.toml
agent/: compiler.py  generator_qlib.py  generator_qlib_search.py  llm_client.py  prompts_qlib_instruction.py
agent/qlib_contrib/: qlib_expr_parsing.py  qlib_extend_ops.py  qlib_ops.py  qlib_valid.py
agent/robust/: valid.py
api/: README.md  app.py  factor_cache_manager.py  factor_eval_api.py  factor_eval_client.py  utils.py
backtest/qlib/: dataloader.py  single_alpha_backtest.py
benchmark/: collect_performance.py  run_benchmark.py
benchmark/engine/: __init__.py  utils.py
benchmark/utils/: __init__.py  controllability.py  eval.py
cache_data/: factor_cache.db
config/: api_keys.yaml  benchmark.yaml  search.yaml
example/: README.md
example/01_build_datasets/: README.md  build_atomic_pairwise_dataset.py
example/02_run_evaluation/: run_t2_scoring.py  run_t4_atomic.py
example/generate/: README.md  eval_t1_fitness.py  run_t1_generate.py
example/search/: README.md  run_t3_search.py
factors/lib/: alpha101.json  chatgptalpha101.json
factors/registry/: factor_categories.json
ffo/: ASSAY_ENGINE.md  README.md  README_API.md  __init__.py  backend_app.py  factor_cache.sqlite  start.sh  web_app.py
scripts/: run_evaluate_benchmark.sh  run_generate_benchmark.sh  run_search_benchmark.sh
searcher/: EAFactorSearcher.py  README.md  TreeBasedSearcher.py  __init__.py  backtester.py  config.yaml  pipeline.py  run_all_algos.sh  run_test_backtest.py  seed_factors.json  start_search.py
(+106 files in other folders)
